fixed margins on border-x and btn-link carrot spacing

--- a/v1/styles.css
+++ b/v1/styles.css
@@ -222,7 +222,7 @@ ul {
   height: 32px;
   display: flex;
   align-items: center;
-  margin-left: 16px;
+  margin-left: 22px;
 }
 
 /* buttons & links */
@@ -243,7 +243,7 @@ ul {
   --btn-text-size: 12px;
   --btn-background: transparent;
   --btn-border-color: transparent;
-  margin-left: 8px;
+  margin-left: 14px;
 }
 
 .btn--md {
